--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8" />
-	<title>Assignment 1 | COMP1073 Client-Side JavaScript</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
-
-<body>
-	<h1>See-N-Say Storymaker</h1>
-	<p id="studentId"></p>
-	<section>
-		<!-- Section with all the buttons for the user to build their story -->
-		<h2>Create Your Story</h2>
-		<button id="noun1">Noun 1</button>
-		<p id="choosenNoun1"></p>
-		<button id="verb">Verb</button>
-		<p id="choosenVerb"></p>
-		<button id="adjective">Adjective</button>
-		<p id="choosenAdjective"></p>
-		<button id="noun2">Noun 2</button>
-		<p id="choosenNoun2"></p>
-		<button id="setting">Setting</button>
-		<p id="choosenSetting"></p>
-	</section>
-	<section>
-		<!-- Section with playback controls to see or hear the story -->
-		<h2>See Your Story</h2>
-		<button id="playback">Show Story</button>
-		<button id="random">Random Story</button>
-		<!-- Empty paragraph to display the story -->
-		<p id="story"></p>
-	</section>
-</body>
-
+	<head>
+		<meta charset="utf-8">
+		<title>Assignment 1 | COMP1073 Client-Side JavaScript</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" type="image/x-icon" href="./img/popup-tick-mark.png">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script defer src="js/storymaker.js"></script>
+	</head>
+	<body>
+		<h1>See-N-Say Storymaker</h1>
+		<p id="studentId">Dummy</p>
+		<section>
+			<!-- Section with all the buttons for the user to build their story -->
+			<h2>Create Your Story</h2>
+			<button id="noun1">Noun 1</button>
+			<p id="choosenNoun1">Dummy</p>
+			<button id="verb">Verb</button>
+			<p id="choosenVerb">Dummy</p>
+			<button id="adjective">Adjective</button>
+			<p id="choosenAdjective">Dummy</p>
+			<button id="noun2">Noun 2</button>
+			<p id="choosenNoun2">Dummy</p>
+			<button id="setting">Setting</button>
+			<p id="choosenSetting">Dummy</p>
+		</section>
+		<section>
+			<!-- Section with playback controls to see or hear the story -->
+			<h2>See Your Story</h2>
+			<button id="playback">Show Story</button>
+			<button id="random">Random Story</button>
+			<button id="reset">Reset</button>
+			<!-- Empty paragraph to display the story -->
+			<p id="story">Dummy</p>
+		</section>
+	</body>
 </html>
