--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Deep Biswas | 200554124 -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -7,6 +8,7 @@
 		<link rel="icon" type="image/x-icon" href="./img/popup-tick-mark.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script defer src="js/storymaker.js"></script>
+		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
 		<h1>See-N-Say Storymaker</h1>
